--- a/pc_axis_1.ipynb
+++ b/pc_axis_1.ipynb
@@ -1152,7 +1152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ahora ya puedes darle al matplotlib"
+    "Ahora ya puedes darle caña al matplotlib"
    ]
   },
   {
